--- a/assets/css/scss/_variables.scss
+++ b/assets/css/scss/_variables.scss
@@ -6,3 +6,4 @@ $font-bold:nunito-bold;
 $font-semiBold:nunito-semiBold;
 $font-medium:nunito-medium;
 $font-light:nunito-light;
+$font-xlight:nunito-extraLight;
