--- a/assets/css/scss/_s2.scss
+++ b/assets/css/scss/_s2.scss
@@ -26,6 +26,10 @@
             width: 100%;
         }
     }
+    &.active{
+        font-family: $font-bold;
+        transform: scale(1.15);
+    }
 }
 .container__car{
     position: relative;
@@ -69,7 +73,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
-    &:focus, .active{
+    &:focus, &.active{
         outline: none;
         border-color: $secondary-color;
     }
@@ -90,4 +94,7 @@
     display: flex;
     align-items: center;
     gap: 1em;
+}
+#colorTxt {
+    font-family: 'nunito-semiBold';
 }
