--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,348 +1,1 @@
-@font-face {
-  font-family: "nunito-regular";
-  src: url("../fonts/Nunito-Regular.ttf") format("truetype");
-}
-@font-face {
-  font-family: "nunito-light";
-  src: url("../fonts/Nunito-Light.ttf") format("truetype");
-}
-@font-face {
-  font-family: "nunito-medium";
-  src: url("../fonts/Nunito-Medium.ttf") format("truetype");
-}
-@font-face {
-  font-family: "nunito-bold";
-  src: url("../fonts/Nunito-Bold.ttf") format("truetype");
-}
-@font-face {
-  font-family: "nunito-semiBold";
-  src: url("../fonts/Nunito-SemiBold.ttf") format("truetype");
-}
-@font-face {
-  font-family: "nunito-extraLight";
-  src: url("../fonts/Nunito-ExtraLight.ttf") format("truetype");
-}
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: nunito-regular;
-  color: #000;
-}
-
-li::marker {
-  content: "";
-}
-
-a {
-  color: inherit;
-}
-a:hover {
-  color: inherit;
-  text-decoration: none;
-}
-
-.container_section {
-  padding: 0 clamp(2em, 5vw - 1em, 5em);
-}
-
-.section-lg {
-  min-height: 100vh;
-}
-
-.--font-bold {
-  font-family: nunito-bold;
-}
-
-.--font-teen {
-  font-family: nunito-extraLight;
-}
-
-.container__title_section h3 {
-  font-size: clamp(28px, 2vw + 0.4em, 3em);
-}
-
-.container_section {
-  margin: 3rem 0;
-}
-
-.header {
-  position: sticky;
-  top: 0;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  z-index: 3;
-  background: #fff;
-}
-
-.header__nav {
-  display: flex;
-  align-items: center;
-  min-height: 70px;
-  padding: 0 clamp(2em, 5vw - 1em, 5em);
-}
-.header__nav > ul {
-  padding: 0;
-}
-
-.header__nav__url {
-  display: flex;
-  gap: 2em;
-  margin: auto;
-}
-.header__nav__url > li {
-  position: relative;
-  text-transform: uppercase;
-  transition: all 0.2s ease-in-out;
-}
-.header__nav__url > li::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  width: 0;
-  height: 2px;
-  background-color: #000;
-  transition: width 0.2s ease-in-out;
-}
-.header__nav__url > li:hover::before {
-  width: 100%;
-}
-.header__nav__url > li > a {
-  font-family: nunito-bold;
-  font-size: clamp(11px, 0.5vw + 5px, 14px);
-}
-
-.home {
-  position: relative;
-  display: flex;
-  align-items: center;
-  height: calc(100vh - 70px);
-  margin-bottom: 5rem;
-  background-image: url("../img/homebg.avif");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-.home::before {
-  content: "";
-  width: 100%;
-  height: calc(100vh - 70px);
-  background-color: rgba(0, 0, 0, 0.31);
-  position: absolute;
-}
-
-.container_slogan {
-  color: #fff;
-  z-index: 1;
-  padding: 0 clamp(2em, 5vw - 1em, 5em);
-}
-.container_slogan h1 {
-  font-family: "nunito-bold";
-  font-size: clamp(35px, 6vw - 1em, 4.5em);
-}
-.container_slogan p {
-  font-size: clamp(16px, 2.5vw - 1em, 3.5em);
-}
-
-.tabs__btn {
-  display: flex;
-  gap: 2em;
-  justify-content: center;
-  padding: 0;
-  margin-bottom: 2.5rem;
-}
-
-.tab {
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-  position: relative;
-  font-family: nunito-semiBold;
-}
-.tab::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  width: 0;
-  height: 2px;
-  background-color: #000;
-  transition: width 0.2s ease-in-out;
-}
-.tab:hover::before {
-  width: 100%;
-}
-.tab.active {
-  font-family: nunito-bold;
-  transform: scale(1.15);
-}
-
-.container__car {
-  position: relative;
-  background-image: url("../img/luxury_fondo.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.container__car h4 {
-  font-size: clamp(30px, 1vw + 2em, 50px);
-}
-
-#luxury_color_change {
-  position: relative;
-  background-image: url("../img/luxury1.avif");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100%;
-  width: clamp(600px, 70vw - 2rem, 1000px);
-  height: 450px;
-  margin-left: auto;
-  transform: translateY(35px);
-}
-
-.info__car {
-  padding: 2rem;
-  color: #fff;
-  text-align: center;
-  flex: 1;
-}
-
-.container__btn__change__color {
-  padding: 2em 0;
-}
-
-.btn_color {
-  width: 45px;
-  height: 45px;
-  outline: none;
-  border: 1px solid transparent;
-  cursor: pointer;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100%;
-}
-.btn_color:focus, .btn_color.active {
-  outline: none;
-  border-color: #000;
-}
-
-.--white-car-color {
-  background-image: url("../img/white-btn-change.avif");
-}
-
-.--black-car-color {
-  background-image: url("../img/black-btn-change.avif");
-}
-
-.--red-car-color {
-  background-image: url("../img/red-btn-change.avif");
-}
-
-.--blue-car-color {
-  background-image: url("../img/blue-btn-change.avif");
-}
-
-.container__btn__change__color {
-  display: flex;
-  align-items: center;
-  gap: 1em;
-}
-
-#colorTxt {
-  font-family: "nunito-semiBold";
-}
-
-.container__img__column img {
-  width: 100%;
-}
-
-.container__text__column {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5em;
-}
-.container__text__column h3 {
-  margin: 1rem 0;
-  font-size: clamp(28px, 3vw + 0.25em, 3.2em);
-}
-.container__text__column p {
-  font-size: 18px;
-}
-
-.container-gallery {
-  padding: 1rem 0;
-}
-.container-gallery > .row {
-  margin: 4rem 0;
-}
-
-.text__form span {
-  font-size: clamp(20px, 5vw - 2em, 40px);
-  font-family: "nunito-bold";
-}
-.text__form p {
-  font-size: 18px;
-}
-
-form {
-  width: 100%;
-  max-width: 400px;
-  margin: auto;
-}
-form > .row {
-  gap: 1em;
-}
-
-.container__data label {
-  margin-bottom: 0.2rem;
-  font-family: nunito-semiBold;
-}
-
-.form-control {
-  box-shadow: none;
-  border: 1px solid #a8a8a8;
-  min-height: 42px;
-  transition: all 0.3s ease;
-}
-.form-control:focus, .form-control:hover {
-  box-shadow: none;
-  border-color: #000;
-  transition: all 0.3s ease;
-}
-
-.container__btn-action {
-  padding: 0 0.5em;
-  margin: 1rem 0;
-  display: flex;
-  justify-content: center;
-}
-
-.btn-send {
-  background-color: #fff;
-  outline: none;
-  border: 1px solid #000;
-  width: 100%;
-  max-width: 130px;
-  padding: 0.5em;
-  font-size: 14px;
-  font-family: "nunito-semiBold";
-  transition: all 0.3s ease-in-out;
-  cursor: pointer;
-}
-.btn-send:hover, .btn-send:focus {
-  background-color: #000;
-  color: #fff;
-  transition: all 0.3s ease-in-out;
-}
-
-.footer {
-  min-height: 60vh;
-  background-color: #000;
-}
-
-.footer__links__url a {
-  color: #fff;
-}
-
-/*# sourceMappingURL=style.css.map */
+:root{--primary-color:#fff;--secondary-color:#000;--font-bold:nunito-bold;--font-semiBold:nunito-semiBold;--font-medium:nunito-medium;--font-light:nunito-light;--font-xlight:nunito-extraLight;}@font-face{font-family:"nunito-regular";src:url("../fonts/Nunito-Regular.ttf") format("truetype");}@font-face{font-family:"nunito-light";src:url("../fonts/Nunito-Light.ttf") format("truetype");}@font-face{font-family:"nunito-medium";src:url("../fonts/Nunito-Medium.ttf") format("truetype");}@font-face{font-family:"nunito-bold";src:url("../fonts/Nunito-Bold.ttf") format("truetype");}@font-face{font-family:"nunito-semiBold";src:url("../fonts/Nunito-SemiBold.ttf") format("truetype");}@font-face{font-family:"nunito-extraLight";src:url("../fonts/Nunito-ExtraLight.ttf") format("truetype");}html{scroll-behavior:smooth;}body{font-family:nunito-regular;color:var(--secondary-color);}li::marker{content:"";}a{color:inherit;}a:hover{color:inherit;text-decoration:none;}.container_section{padding:0 clamp(2em,5vw - 1em,5em);}.section-lg{min-height:100vh;}.--font-bold{font-family:nunito-bold;}.--font-teen{font-family:nunito-extraLight;}.container__title_section h3{font-size:clamp(28px,2vw + 0.4em,3em);}.container_section{margin:3rem 0;}.hide{display:none;}.fade-up,.fade-right,.fade-left,.zoom-in{opacity:0;transition:opacity 0.4s ease;}.fade-right,.fade-left{transition:opacity 0.4s ease,transform 0.4s ease;}.zoom-in{transition:opacity 0.4s ease,transform 0.4s ease;}.fade-right{transform:translateX(-30px);}.fade-left{transform:translateX(30px);}.zoom-in{transform:scale(0.8);}.fade-up.active,.fade-right.active,.fade-left.active,.zoom-in.active{opacity:1;transform:translate(0) scale(1);}.header{position:sticky;top:0;box-shadow:rgba(100,100,111,0.2) 0px 7px 29px 0px;z-index:3;background:var(--primary-color);}.header__nav{display:flex;align-items:center;min-height:70px;padding:0 clamp(2em,5vw - 1em,5em);}.header__nav >ul{padding:0;}.header__nav__url{display:flex;gap:2em;margin:auto;}.header__nav__url >li{position:relative;text-transform:uppercase;transition:all 0.2s ease-in-out;}.header__nav__url >li::before{content:"";position:absolute;bottom:0;width:0;height:2px;background-color:var(--secondary-color);transition:width 0.2s ease-in-out;}.header__nav__url >li:hover::before{width:100%;}.header__nav__url >li >a{font-family:nunito-bold;font-size:clamp(11px,0.5vw + 5px,14px);}.home{position:relative;display:flex;align-items:center;height:calc(100vh - 70px);margin-bottom:5rem;background-image:url("../img/homebg.avif");background-repeat:no-repeat;background-size:cover;background-position:center;}.home::before{content:"";width:100%;height:calc(100vh - 70px);background-color:rgba(0,0,0,0.31);position:absolute;}.container_slogan{color:var(--primary-color);z-index:1;padding:0 clamp(2em,5vw - 1em,5em);}.container_slogan h1{font-family:"nunito-bold";font-size:clamp(35px,6vw - 1em,4.5em);}.container_slogan p{font-size:clamp(16px,2.5vw - 1em,3.5em);}.tabs__btn{display:flex;gap:2em;justify-content:center;padding:0;margin-bottom:2.5rem;}.tab{cursor:pointer;transition:all 0.2s ease-in-out;position:relative;font-family:nunito-semiBold;}.tab::before{content:"";position:absolute;bottom:0;width:0;height:2px;background-color:var(--secondary-color);transition:width 0.2s ease-in-out;}.tab:hover::before{width:100%;}.tab.active{font-family:nunito-bold;transform:scale(1.15);}.container__car,.--sportView{position:relative;background-image:url("../img/luxury_fondo.jpg");background-repeat:no-repeat;background-position:center;background-size:cover;display:flex;align-items:center;flex-wrap:wrap;}.container__car h4,.--sportView h4{font-size:clamp(30px,1vw + 2em,50px);}.--sportView{background-image:url("../img/sport_fondo.jpg");}.--suvView{background-image:url("../img/suv_fondo.jpg");}#luxury_color_change{position:relative;background-image:url("../img/luxury1.avif");background-repeat:no-repeat;background-position:center;background-size:100%;width:clamp(600px,70vw - 2rem,1000px);height:450px;margin-left:auto;}#Sport_color_change{position:relative;background-image:url("../img/sport1.png");background-repeat:no-repeat;background-position:center;background-size:100%;width:clamp(600px,70vw - 2rem,1000px);height:450px;margin-left:auto;}#Suv_color_change{position:relative;background-image:url("../img/suv1.avif");background-repeat:no-repeat;background-position:center;background-size:100%;width:clamp(600px,70vw - 2rem,1000px);height:450px;margin-left:auto;}.info__car{padding:2rem;color:var(--primary-color);text-align:center;flex:1;}.container__btn__change__color{padding:2em 0;}.btn_color{width:45px;height:45px;outline:none;border:1px solid transparent;cursor:pointer;background-repeat:no-repeat;background-position:center;background-size:100%;}.btn_color:focus,.btn_color.active{outline:none;border-color:var(--secondary-color);}.--white-car-color{background-image:url("../img/white-btn-change.avif");}.--black-car-color,.--black-car-color-sp,.--black-car-color-suv{background-image:url("../img/black-btn-change.avif");}.--red-car-color,.--red-car-color-sp,.--red-car-color-suv{background-image:url("../img/red-btn-change.avif");}.--blue-car-color,.--blue-car-color-sp,.--blue-car-color-suv{background-image:url("../img/blue-btn-change.avif");}.--yellow-car-color-sp{background-image:url("../img/yellow-btn-change.avif");}.--orange-car-color-suv{background-image:url("../img/orange-btn-change.avif");}.container__btn__change__color{display:flex;align-items:center;gap:1em;}#colorTxt{font-family:"nunito-semiBold";}.container__img__column img{width:100%;}.container__text__column{display:flex;flex-direction:column;gap:0.5em;}.container__text__column h3{margin:1rem 0;font-size:clamp(28px,3vw + 0.25em,3.2em);}.container__text__column p{font-size:18px;}.container-gallery{padding:1rem 0;}.container-gallery >.row{margin:4rem 0;}.text__form span{font-size:clamp(20px,5vw - 2em,40px);font-family:"nunito-bold";}.text__form p{font-size:18px;}form{width:100%;max-width:400px;margin:auto;}form >.row{gap:1em;}.container__data label{margin-bottom:0.2rem;font-family:nunito-semiBold;}.form-control{box-shadow:none;border:1px solid #a8a8a8;min-height:42px;transition:all 0.3s ease;}.form-control:focus,.form-control:hover{box-shadow:none;border-color:var(--secondary-color);transition:all 0.3s ease;}.container__btn-action{padding:0 0.5em;margin:1rem 0;display:flex;justify-content:center;}.btn-send{background-color:var(--primary-color);outline:none;border:1px solid var(--secondary-color);width:100%;max-width:130px;padding:0.5em;font-size:14px;font-family:"nunito-semiBold";transition:all 0.3s ease-in-out;cursor:pointer;}.btn-send:hover,.btn-send:focus{background-color:var(--secondary-color);color:var(--primary-color);transition:all 0.3s ease-in-out;}.footer{min-height:400px;background-color:var(--secondary-color);display:flex;align-items:center;}.footer__links__url a{color:var(--primary-color);font-size:clamp(16px,3vw + 0.2em,30px);font-family:"nunito-extraLight";}.footer__logo__container{display:flex;flex-direction:column;color:var(--primary-color);justify-content:center;align-items:center;}.footer__logo__container img{width:clamp(100px,8vw + 3rem,400px);}.footer__logo__container span{font-size:clamp(35px,5vw + 1rem,50px);font-family:"nunito-extraLight";margin-top:-1vw;}.footer__links{margin-bottom:0;padding-left:0;}.footer__links >li a{position:relative;text-transform:uppercase;transition:all 0.2s ease-in-out;}.footer__links >li a::before{content:"";position:absolute;bottom:0;width:0;height:2px;background-color:var(--primary-color);transition:width 0.2s ease-in-out;}.footer__links >li a:hover::before{width:100%;}.footer__links__url{margin-bottom:1rem;}.footer__links__url:last-child{margin-bottom:0;}.container__url{margin-top:3.5vw;}.footer__nav{display:flex;justify-content:center;}.red_link svg{width:clamp(40px,5vw - 1em,50px);fill:var(--primary-color);}.red_link{color:var(--primary-color);display:flex;align-items:center;gap:1rem;font-family:"nunito-extraLight";}.red_link span{display:block;}.redes ul{display:flex;flex-direction:column;gap:1.5rem;margin-top:3.5vw;}
